--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/main.css">
-  <title>What's wrong with this script?</title>
+  <title>websiteLab</title>
  </head>
 <body>
   <div class="container">
-  <h1>Can you get the JavaScript to work?</h1>
+  <h1>HEY!!!</h1>
   <script src="test.js"></script>
   </div>
 </body>
