--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/main.css">
   <title>websiteLab</title>
+  <link rel="shortcut icon" href="http://www.cats.org.uk/uploads/images/pages/photo_latest14.jpg">
  </head>
 <body>
-  <div class="container">
-  <h1>HEY!!!!</h1>
+  <!--
+  <table>
+    <tr>
+       <td contenteditable='true' class='blocks' > X </td>
+      <td contenteditable='true' class='blocks'> Y </td>
+  </tr>
+  </table>
+-->
+
+  <div id = "poop" class="container">
   <script src="test.js"></script>
-  </div>
+
 </body>
 </html>
