--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 -->
 
   <div id = "poop" class="container">
-  <script src="test.js"></script>
+  <script src="main.js"></script>
 
 </body>
 </html>
