--- a/index.html
+++ b/index.html
@@ -8,17 +8,8 @@
   <link rel="shortcut icon" href="http://www.cats.org.uk/uploads/images/pages/photo_latest14.jpg">
  </head>
 <body>
-  <!--
-  <table>
-    <tr>
-       <td contenteditable='true' class='blocks' > X </td>
-      <td contenteditable='true' class='blocks'> Y </td>
-  </tr>
-  </table>
--->
-
   <div id = "poop" class="container">
   <script src="main.js"></script>
-
+</div>
 </body>
 </html>
