--- a/sudoku.html
+++ b/sudoku.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="sudoku.css"/>
 </head>
 <body id="mainBody">
-  <h1>Sudoku</h1>
+  <h1 id="mainTitle">Sudoku</h1>
   <div class="topDivClass" id="topDiv">
     <button class="newGameButton" onclick = "menuSwapBack()">Start a New Game</button>
   </div>
