--- a/sudoku.html
+++ b/sudoku.html
@@ -21,9 +21,11 @@
   <div class="blockTable" id="blkT">
     <div class="blockHolder" id="blkH"></div>
   </div>
+
 </body>
-<footer id="sFooter">
-  - created by Early Boone -
+<footer class="announcement" id="sFooter">
+  - created by Bob Main -
 </footer>
 <script src="sudoku.js"></script>
+<script src="allG.js"></script>
 </html>
